[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
log = "0.4.25"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"
wee_alloc = "0.4.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
