[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
static_assertions = "1.1.0"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"
wee_alloc = "0.4.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
