[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
clap = { version = "4.5.31", features = ["derive", "env"] }
futures-util = "0.3.31"
http-body-util = "0.1.2"
include_dir = "0.7.4"
mime_guess = "2.0.5"
mongodb = { version = "3.2.2", features = ["tracing-unstable"] }
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
